# ToPick-api

./: README.md  config.py  docker-compose-debug.yml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
api/: db.py  genericCode.py  main.py  migrate_db.py
api/codes/: report_reasons.py
api/cruds/: admin_cruds.py  auth.py  auth_cruds.py  brows.py  browse.py  browse_cruds.py  common.py  common_cruds.py  discover.py  discover_cruds.py  mylist.py  mylist_cruds.py  user.py  user_cruds.py
api/models/: auth.py  common_model.py  mylist.py  mylist_model.py  theme.py  theme_model.py  user_model.py
api/routers/: admin_router.py  auth.py  auth_router.py  brows.py  browse.py  browse_router.py  contact.py  contact_router.py  discover.py  discover_router.py  mylist.py  mylist_router.py  user.py
api/schemas/: auth.py  auth_schema.py  contact_schema.py  mylist.py  mylist_schema.py  theme.py  theme_schema.py  user.py  user_schema.py
api/utils/: mail_utils.py
db/share/: insert_prepared_theme.sql
tests/: conftest.py  test_auth.py  test_default_theme.py  test_discover.py  test_main.py  test_mylist.py
