[tool.poetry]
name = "topick"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
passlib = "^1.7.4"
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.42"
aiomysql = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.2"
aiosqlite = "^0.17.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
